--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,19 @@
+# Initialize TMUX plugin manager
+if "test ! -d ~/.tmux/plugins/tpm" \
+     "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+
+run '~/.tmux/plugins/tpm/tpm'
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'casonadams/tmux-vi-navigation'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'wfxr/tmux-fzf-url' # prefix + u
+set -g @plugin 'dracula/tmux'
+set -g @dracula-plugins "git battery cpu-usage ram-usage network-bandwidth time"
+set -g @dracula-show-powerline true
+
 # -- general -------------------------------------------------------------------
 
 set -g default-terminal "screen-256color" # colors!
@@ -93,7 +109,6 @@ bind U run "cut -c3- ~/.tmux.conf | sh -s _urlview #{pane_id}"
 # -- facebook pathpicker -------------------------------------------------------
 
 bind F run "cut -c3- ~/.tmux.conf | sh -s _fpp #{pane_id}"
-
 
 # -- list choice (tmux < 2.4) --------------------------------------------------
 
