--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,11 @@
+set -g default-terminal "alacritty"
+
 # Initialize TMUX plugin manager
 if "test ! -d ~/.tmux/plugins/tpm" \
      "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
 run '~/.tmux/plugins/tpm/tpm'
+
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -11,7 +14,7 @@ set -g @plugin 'casonadams/tmux-vi-navigation'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'wfxr/tmux-fzf-url' # prefix + u
 set -g @plugin 'dracula/tmux'
-set -g @dracula-plugins "git battery cpu-usage ram-usage network-bandwidth time"
+set -g @dracula-plugins "git battery cpu-usage ram-usage time"
 set -g @dracula-show-powerline true
 
 # -- general -------------------------------------------------------------------
@@ -69,9 +72,9 @@ bind C-c new-session
 bind C-f command-prompt -p find-session 'switch-client -t %%'
 
 # split current window horizontally
-bind - split-window -v
+bind - split-window -v -c '#{pane_current_path}'
 # split current window vertically
-bind _ split-window -h
+bind _ split-window -h -c '#{pane_current_path}'
 
 # pane navigation
 bind -r h select-pane -L  # move left
